<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app">

    <TextView
        android:id="@+id/Nivel1_txt"
        style="@style/txt_titulo_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_nivel1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_amigos"
        style="@style/txt_subtitulo_gris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/txt_amigos_plan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nivel1_txt" />

    <TextView
        android:id="@+id/txt_ruleta"
        style="@style/txt_titulo_negro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/txt_ruleta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Nivel1_txt" />

    <ImageView
        android:id="@+id/imgRuleta"
        android:layout_width="288dp"
        android:layout_height="416dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_ruleta"
        android:src="@drawable/ruleta" />

    <ImageView
        android:id="@+id/imgEleccion"
        android:layout_width="38dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:rotation="90"
        app:layout_constraintEnd_toEndOf="@+id/imgRuleta"
        app:layout_constraintStart_toStartOf="@+id/imgRuleta"
        app:layout_constraintTop_toBottomOf="@+id/txt_ruleta"
        android:src="@drawable/item_select" />

    <ImageButton
        android:id="@+id/girarRuleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:background="@color/white"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/icono_fantasma"
        app:layout_constraintEnd_toEndOf="@+id/imgRuleta"
        app:layout_constraintStart_toStartOf="@+id/imgRuleta"
        app:layout_constraintTop_toBottomOf="@+id/imgEleccion" />

    <Button
        android:id="@+id/sugerirPlan"
        style="@style/txt_boton_blanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/txt_n_plan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toEndOf="@+id/Nivel1_txt"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>